Graphql server proxy for frontend client

--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "state-client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "@apollo/react-hooks": "^4.0.0",
     "@chakra-ui/core": "^0.8.0",
