Fix NPM packages in root and client via package json file

--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "state-client",
-  "version": "0.1.0",
+  "name": "dory",
+  "version": "1.0.0",
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
